--- a/static/css/sections/docs.styl
+++ b/static/css/sections/docs.styl
@@ -102,6 +102,7 @@
     .nav-docs
       width: 100%
       position: static
+      overflow: auto
     .docs-content
       max-width: 500px
       margin: 0 auto
